--- a/ItemBased/ItemBased.ipynb
+++ b/ItemBased/ItemBased.ipynb
@@ -3982,198 +3982,18 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column 7 not found in input_item_pred\n",
-      "Column 10 not found in input_item_pred\n",
-      "Column 16 not found in input_item_pred\n",
-      "Column 18 not found in input_item_pred\n",
-      "Column 23 not found in input_item_pred\n",
-      "Column 25 not found in input_item_pred\n",
-      "Column 38 not found in input_item_pred\n",
-      "Column 42 not found in input_item_pred\n",
-      "Column 43 not found in input_item_pred\n",
-      "Column 49 not found in input_item_pred\n",
-      "Column 58 not found in input_item_pred\n",
-      "Column 60 not found in input_item_pred\n",
-      "Column 69 not found in input_item_pred\n",
-      "Column 79 not found in input_item_pred\n",
-      "Column 82 not found in input_item_pred\n",
-      "Column 85 not found in input_item_pred\n",
-      "Column 87 not found in input_item_pred\n",
-      "Column 89 not found in input_item_pred\n",
-      "Column 91 not found in input_item_pred\n",
-      "Column 99 not found in input_item_pred\n",
-      "Column 102 not found in input_item_pred\n",
-      "Column 125 not found in input_item_pred\n",
-      "Column 128 not found in input_item_pred\n",
-      "Column 141 not found in input_item_pred\n",
-      "Column 145 not found in input_item_pred\n",
-      "Column 152 not found in input_item_pred\n",
-      "Column 157 not found in input_item_pred\n",
-      "Column 167 not found in input_item_pred\n",
-      "Column 174 not found in input_item_pred\n",
-      "Column 176 not found in input_item_pred\n",
-      "Column 194 not found in input_item_pred\n",
-      "Column 195 not found in input_item_pred\n",
-      "Column 201 not found in input_item_pred\n",
-      "Column 210 not found in input_item_pred\n",
-      "Column 215 not found in input_item_pred\n",
-      "Column 223 not found in input_item_pred\n",
-      "Column 230 not found in input_item_pred\n",
-      "Column 233 not found in input_item_pred\n",
-      "Column 234 not found in input_item_pred\n",
-      "Column 250 not found in input_item_pred\n",
-      "Column 254 not found in input_item_pred\n",
-      "Column 256 not found in input_item_pred\n",
-      "Column 262 not found in input_item_pred\n",
-      "Column 263 not found in input_item_pred\n",
-      "Column 269 not found in input_item_pred\n",
-      "Column 275 not found in input_item_pred\n",
-      "Column 280 not found in input_item_pred\n",
-      "Column 286 not found in input_item_pred\n",
-      "Column 290 not found in input_item_pred\n",
-      "Column 293 not found in input_item_pred\n",
-      "Column 295 not found in input_item_pred\n",
-      "Column 298 not found in input_item_pred\n",
-      "Column 311 not found in input_item_pred\n",
-      "Column 313 not found in input_item_pred\n",
-      "Column 325 not found in input_item_pred\n",
-      "Column 330 not found in input_item_pred\n",
-      "Column 332 not found in input_item_pred\n",
-      "Column 334 not found in input_item_pred\n",
-      "Column 339 not found in input_item_pred\n",
-      "Column 342 not found in input_item_pred\n",
-      "Column 343 not found in input_item_pred\n",
-      "Column 346 not found in input_item_pred\n",
-      "Column 349 not found in input_item_pred\n",
-      "Column 378 not found in input_item_pred\n",
-      "Column 381 not found in input_item_pred\n",
-      "Column 389 not found in input_item_pred\n",
-      "Column 392 not found in input_item_pred\n",
-      "Column 401 not found in input_item_pred\n",
-      "Column 405 not found in input_item_pred\n",
-      "Column 407 not found in input_item_pred\n",
-      "Column 409 not found in input_item_pred\n",
-      "Column 413 not found in input_item_pred\n",
-      "Column 426 not found in input_item_pred\n",
-      "Column 436 not found in input_item_pred\n",
-      "Column 437 not found in input_item_pred\n",
-      "Column 449 not found in input_item_pred\n",
-      "Column 450 not found in input_item_pred\n",
-      "Column 452 not found in input_item_pred\n",
-      "Column 454 not found in input_item_pred\n",
-      "Column 456 not found in input_item_pred\n",
-      "Column 457 not found in input_item_pred\n",
-      "Column 458 not found in input_item_pred\n",
-      "Column 459 not found in input_item_pred\n",
-      "Column 465 not found in input_item_pred\n",
-      "Column 471 not found in input_item_pred\n",
-      "Column 474 not found in input_item_pred\n",
-      "Column 483 not found in input_item_pred\n",
-      "Column 486 not found in input_item_pred\n",
-      "Column 491 not found in input_item_pred\n",
-      "Column 495 not found in input_item_pred\n",
-      "Column 496 not found in input_item_pred\n",
-      "Column 500 not found in input_item_pred\n",
-      "Column 504 not found in input_item_pred\n",
-      "Column 505 not found in input_item_pred\n",
-      "Column 506 not found in input_item_pred\n",
-      "Column 518 not found in input_item_pred\n",
-      "Column 521 not found in input_item_pred\n",
-      "Column 527 not found in input_item_pred\n",
-      "Column 533 not found in input_item_pred\n",
-      "Column 536 not found in input_item_pred\n",
-      "Column 539 not found in input_item_pred\n",
-      "Column 541 not found in input_item_pred\n",
-      "Column 542 not found in input_item_pred\n",
-      "Column 545 not found in input_item_pred\n",
-      "Column 546 not found in input_item_pred\n",
-      "Column 553 not found in input_item_pred\n",
-      "Column 555 not found in input_item_pred\n",
-      "Column 569 not found in input_item_pred\n",
-      "Column 577 not found in input_item_pred\n",
-      "Column 599 not found in input_item_pred\n",
-      "Column 601 not found in input_item_pred\n",
-      "Column 620 not found in input_item_pred\n",
-      "Column 630 not found in input_item_pred\n",
-      "Column 632 not found in input_item_pred\n",
-      "Column 642 not found in input_item_pred\n",
-      "Column 650 not found in input_item_pred\n",
-      "Column 666 not found in input_item_pred\n",
-      "Column 686 not found in input_item_pred\n",
-      "Column 690 not found in input_item_pred\n",
-      "Column 693 not found in input_item_pred\n",
-      "Column 698 not found in input_item_pred\n",
-      "Column 705 not found in input_item_pred\n",
-      "Column 710 not found in input_item_pred\n",
-      "Column 711 not found in input_item_pred\n",
-      "Column 712 not found in input_item_pred\n",
-      "Column 716 not found in input_item_pred\n",
-      "Column 734 not found in input_item_pred\n",
-      "Column 747 not found in input_item_pred\n",
-      "Column 751 not found in input_item_pred\n",
-      "Column 756 not found in input_item_pred\n",
-      "Column 760 not found in input_item_pred\n",
-      "Column 763 not found in input_item_pred\n",
-      "Column 764 not found in input_item_pred\n",
-      "Column 766 not found in input_item_pred\n",
-      "Column 769 not found in input_item_pred\n",
-      "Column 786 not found in input_item_pred\n",
-      "Column 788 not found in input_item_pred\n",
-      "Column 795 not found in input_item_pred\n",
-      "Column 796 not found in input_item_pred\n",
-      "Column 807 not found in input_item_pred\n",
-      "Column 815 not found in input_item_pred\n",
-      "Column 823 not found in input_item_pred\n",
-      "Column 825 not found in input_item_pred\n",
-      "Column 826 not found in input_item_pred\n",
-      "Column 830 not found in input_item_pred\n",
-      "Column 840 not found in input_item_pred\n",
-      "Column 843 not found in input_item_pred\n",
-      "Column 846 not found in input_item_pred\n",
-      "Column 847 not found in input_item_pred\n",
-      "Column 848 not found in input_item_pred\n",
-      "Column 878 not found in input_item_pred\n",
-      "Column 881 not found in input_item_pred\n",
-      "Column 882 not found in input_item_pred\n",
-      "Column 885 not found in input_item_pred\n",
-      "Column 890 not found in input_item_pred\n",
-      "Column 892 not found in input_item_pred\n",
-      "Column 894 not found in input_item_pred\n",
-      "Column 897 not found in input_item_pred\n",
-      "Column 903 not found in input_item_pred\n",
-      "Column 907 not found in input_item_pred\n",
-      "Column 911 not found in input_item_pred\n",
-      "Column 913 not found in input_item_pred\n",
-      "Column 919 not found in input_item_pred\n",
-      "Column 922 not found in input_item_pred\n",
-      "Column 932 not found in input_item_pred\n",
-      "Column 934 not found in input_item_pred\n",
-      "Column 935 not found in input_item_pred\n",
-      "Column 937 not found in input_item_pred\n",
-      "Column 942 not found in input_item_pred\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "highest_Rated = []\n",
-    "input_item_pre = pd.DataFrame(item_pred[input_item])\n",
-    "input_item_pred = input_item_pre.T\n",
+    "# From recomd list select hightest rated film which would like by the user. Based on User prediction\n",
     "\n",
+    "highest_Rated=[]\n",
+    "input_item_pre=pd.DataFrame(item_pred[input_item])\n",
+    "input_item_pred=input_item_pre.T\n",
     "for re in recom:\n",
-    "    if str(re) in input_item_pred.columns:  # Ensure column exists\n",
-    "        value = input_item_pred[str(re)].values[0]  # Access the first value\n",
-    "        if value >= 1:\n",
-    "            highest_Rated.append(re)\n",
-    "    else:\n",
-    "        print(f\"Column {re} not found in input_item_pred\")\n"
+    "    value=input_item_pred[re].values\n",
+    "    if(value>=1):\n",
+    "        highest_Rated.append(re)\n"
    ]
   },
   {
@@ -4184,7 +4004,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
      "execution_count": 38,
